# warpy

./: .env.example  .gitignore  .gitmodules  .wtcrc.json  AGENTS.md  AWS_DEPLOYMENT.md  DESIGN.md  GTM.md  INFRA_GUIDE.md  PRODUCT  PRODUCT.md  PRODUCT_VISION.md  README.md  WARPY_DESIGN_SYSTEM.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  skills-lock.json
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0c0cf44b8110_user_scoped_entities.py  1a2b3c4d5e67_add_agent_enabled_flag.py  37975598c548_baseline.py  7b3c2d1e8f4a_add_widget_security_to_agents.py  a1b2c3d4e5f6_add_agent_and_embeddings.py  a1b2c3d4e5f6_unify_user_api_keys.py  a9c3d7e1f2b4_add_conversation_actions.py  aa11bb22cc33_add_mcp_connections.py  b1c2d3e4f5a6_add_billing_tables.py  b8d9e0f1a2b3_merge_user_api_key_and_mcp_heads.py  bc7c6b5a4f31_add_user_stats.py  c0b1a2d3e4f5_merge_activity_and_billing_heads.py  c7f5e2a1c123_add_features.py  d2f9a4b1c7de_add_widget_install_prefs_to_agents.py  d4f6e8a0b2c4_make_conversation_actions_tool_call_id_not_null.py  e162df4964bf_merge_heads.py  e5f6a7b8c9d0_add_dynamic_widget_ui.py  ec2a50317db2_add_widget_config_to_agents.py  ed2ee7ad1a42_add_endpoint_search_index.py  f2b4d0e1a6c3_add_auth_type_to_session_headers.py  f8a1b2c3d4e5_add_widget_security_disclosure_enabled.py  g1h2i3j4k5l6_add_user_rate_limit_fields_to_agents.py  h2i3j4k5l6m7_add_message_sequence.py  (+20 more)
backend/app/: main.py  models.py  test_docs_contracts.py
(+510 files in other folders)
