[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warpy-backend"
version = "0.1.0"
description = "Initial FastAPI backend for Warpy"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<0.116.0",
  "uvicorn[standard]>=0.32.0,<0.33.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "psycopg2-binary>=2.9.9,<3.0.0",
  "redis>=5.0.8,<6.0.0",
  "rq>=2.6.0,<3.0.0",
  "pydantic-settings>=2.6.1,<3.0.0",
  "PyJWT>=2.10.1,<3.0.0",
  "alembic>=1.13.3,<2.0.0",
  "httpx>=0.28.1,<1.0.0",
  "beautifulsoup4>=4.14.2,<5.0.0",
  "playwright>=1.55.0,<2.0.0",
  "defusedxml>=0.7.1,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3,<9.0.0"
]

[tool.pytest.ini_options]
addopts = "-q --cov=app --cov-report=term-missing --ignore=app/__pycache__"
testpaths = ["app"]
